reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__controller.rs_line_139_col_5.log

*** crates/tracewake-core/src/controller.rs:139:5: replace controller_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/controller.rs
+++ replace controller_event -> EventEnvelope with Default::default()
@@ -131,55 +131,17 @@
 fn controller_event(
     kind: EventKind,
     controller_id: ControllerId,
     actor_id: Option<ActorId>,
     sequence: u64,
     tick: SimTick,
     content_manifest_id: ContentManifestId,
 ) -> EventEnvelope {
-    let mut event = EventEnvelope::new_v1(
-        EventId::new(format!(
-            "event.{}.{}.{}",
-            kind.stable_id(),
-            controller_id.as_str(),
-            sequence
-        ))
-        .unwrap(),
-        kind,
-        0,
-        0,
-        tick,
-        OrderingKey::new(
-            tick,
-            SchedulePhase::HumanCommand,
-            SchedulerSourceId::Controller(controller_id.clone()),
-            ProposalSequence::new(sequence),
-            crate::ids::ActionId::new(kind.stable_id()).unwrap(),
-            actor_id
-                .as_ref()
-                .map(|id| vec![id.to_string()])
-                .unwrap_or_default(),
-            "controller_binding",
-        ),
-        content_manifest_id,
-    );
-    event.payload = vec![
-        PayloadField::new("controller_id", controller_id.as_str()),
-        PayloadField::new("binding_sequence", sequence.to_string()),
-    ];
-    if let Some(actor_id) = actor_id {
-        event.actor_id = Some(actor_id.clone());
-        event
-            .payload
-            .push(PayloadField::new("actor_id", actor_id.as_str()));
-        event.participants.push(actor_id.to_string());
-    }
-    event.effects_summary = "controller binding metadata changed".to_string();
-    event
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
     use crate::actions::pipeline::{run_pipeline, PipelineContext};
     use crate::actions::proposal::{
         Proposal, ProposalOrigin, ProposalSource, ProposalSourceContext,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/controller.rs` has changed (1781904303.663922740s, 4s after last build at 1781904299.807922698s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `PayloadField`
 --> crates/tracewake-core/src/controller.rs:4:47
  |
4 | use crate::events::{EventEnvelope, EventKind, PayloadField};
  |                                               ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `EventId`
 --> crates/tracewake-core/src/controller.rs:5:60
  |
5 | use crate::ids::{ActorId, ContentManifestId, ControllerId, EventId};
  |                                                            ^^^^^^^

warning: unused imports: `OrderingKey`, `ProposalSequence`, `SchedulePhase`, and `SchedulerSourceId`
 --> crates/tracewake-core/src/controller.rs:6:24
  |
6 | use crate::scheduler::{OrderingKey, ProposalSequence, SchedulePhase, SchedulerSourceId};
  |                        ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/controller.rs:139:5
    |
139 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 3 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/controller.rs:139:5
    |
139 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
